crates/pixi_manifest/src/snapshots/pixi_manifest__tests__test_remove_baz.snap
---
source: crates/pixi_manifest/src/lib.rs
assertion_line: 1691
expression: manifest.document.to_string()
---
            [project]
            name = "foo"
            version = "0.1.0"
            channels = []
            platforms = ["linux-64", "win-64"]

            [dependencies]
            fooz = "*"

            [target.win-64.dependencies]
            bar = "*"
